Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14448

Ctrl-C should not exit the client

    XMLWordPrintable

Details

    Description

      Control-c should not exit the client. It should cancel partial input or abort the current statement if there is one, but it should not do anything else otherwise.
      Control-d should exit the client if the input line is empty.

      This is the expected behavior for interactive applications. The current behavior is unexpected and disruptive.

      (Yes, I know about --sigint-ignore, but that is a poor solution.)

      This bug was fixed in mysql 5.7: https://bugs.mysql.com/bug.php?id=66583

      Attachments

        1. screenshot-1.png
          screenshot-1.png
          41 kB
        2. screenshot-2.png
          screenshot-2.png
          76 kB
        3. screenshot-3.png
          screenshot-3.png
          33 kB

        Activity

          People

            cvicentiu Vicențiu Ciorbaru
            nkovacs Nikola Kovacs
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d 50m
                2d 50m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.