MDEV-14448: Ctrl-C should not exit the client

Reviewed by: <>